--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: cubicweb-orbui
 Section: web
 Priority: optional
-Maintainer: LOGILAB S.A. (Paris, FRANCE) <contact@logilab.fr>
+Maintainer: CreaLibre (Monterrey, MEXICO) <info@crealibre.com>
 Build-Depends: debhelper (>= 5.0.37.1), python (>=2.4), python-support
 Standards-Version: 3.8.0
 
